--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,6 @@
+<!-- single page application -->
+<!-- index.html(only 1개) 안에 app.js등의 js들이 존재하고 jsx 파일들을 통해 기동 -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>React 학습</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
